    non-capturing parentheses, and atomic parentheses. It also applied to some 
    assertions.
    
12. Stephen Kelly's patch to CMakeLists.txt allows it to parse the version 
    information out of configure.ac instead of relying on pcre.h.generic, which 
    is not stored in the repository.  
    
13. Applied Dmitry V. Levin's patch for a more portable method for linking with
    -lreadline.


Version 8.21 12-Dec-2011
------------------------

1.  Updating the JIT compiler.

2.  JIT compiler now supports OP_NCREF, OP_RREF and OP_NRREF. New test cases
    are added as well.

3.  Fix cache-flush issue on PowerPC (It is still an experimental JIT port).
    PCRE_EXTRA_TABLES is not suported by JIT, and should be checked before
    calling _pcre_jit_exec. Some extra comments are added.

4.  (*MARK) settings inside atomic groups that do not contain any capturing
    parentheses, for example, (?>a(*:m)), were not being passed out. This bug
    was introduced by change 18 for 8.20.

5.  Supporting of \x, \U and \u in JavaScript compatibility mode based on the
    ECMA-262 standard.

6.  Lookbehinds such as (?<=a{2}b) that contained a fixed repetition were
    erroneously being rejected as "not fixed length" if PCRE_CASELESS was set.
    This bug was probably introduced by change 9 of 8.13.

7.  While fixing 6 above, I noticed that a number of other items were being
    incorrectly rejected as "not fixed length". This arose partly because newer
    opcodes had not been added to the fixed-length checking code. I have (a)
    corrected the bug and added tests for these items, and (b) arranged for an
    error to occur if an unknown opcode is encountered while checking for fixed
    length instead of just assuming "not fixed length". The items that were
    rejected were: (*ACCEPT), (*COMMIT), (*FAIL), (*MARK), (*PRUNE), (*SKIP),
    (*THEN), \h, \H, \v, \V, and single character negative classes with fixed
    repetitions, e.g. [^a]{3}, with and without PCRE_CASELESS.
